--- a/project-folder/css/style.css
+++ b/project-folder/css/style.css
@@ -1,6 +1,15 @@
+body {
+    margin: 0px;
+}
 .customButton {
     width: 10em;
     height: 5em;
     margin: .5em;
     position: relative;
+}
+
+#buttonContainer {
+    width: 100vw;
+    height: 100vh;
+    margin: 0px;
 }
